LittleDuckCompiler/Grammar/Generated/LittleDuckParser.swift
// Generated from LittleDuck.g4 by ANTLR 4.13.2
import Antlr4

open class LittleDuckParser: Parser {

	internal static var _decisionToDFA: [DFA] = {
          var decisionToDFA = [DFA]()
          let length = LittleDuckParser._ATN.getNumberOfDecisions()
          for i in 0..<length {
            decisionToDFA.append(DFA(LittleDuckParser._ATN.getDecisionState(i)!, i))
           }
           return decisionToDFA
     }()

	internal static let _sharedContextCache = PredictionContextCache()

	public
	enum Tokens: Int {
		case EOF = -1, CONST = 1, PROGRAM = 2, BEGIN = 3, END = 4, VARS = 5, VOID = 6, 
                 WHILE = 7, DO = 8, PRINT = 9, ELSE = 10, INT_TYPE = 11, 
                 FLOAT_TYPE = 12, LPAREN = 13, RPAREN = 14, LBRACE = 15, 
                 RBRACE = 16, SEMICOLON = 17, COLON = 18, COMMA = 19, EQ = 20, 
                 PLUS = 21, MINUS = 22, MUL = 23, DIV = 24, LT = 25, GT = 26, 
                 NEQ = 27, EQEQ = 28, ID = 29, CONST_INT = 30, CONST_FLOAT = 31, 
                 STRING_LITERAL = 32, WS = 33
	}

	public
	static let RULE_program = 0, RULE_optionalVariables = 1, RULE_variableDeclaration = 2, 
            RULE_idList = 3, RULE_moreIds = 4, RULE_functions = 5, RULE_function = 6, 
            RULE_parameterList = 7, RULE_parameter = 8, RULE_moreParameters = 9, 
            RULE_type = 10, RULE_expression = 11, RULE_expressionPrime = 12, 
            RULE_comparisonExpression = 13, RULE_comparisonOperators = 14, 
            RULE_term = 15, RULE_termPrime = 16, RULE_factor = 17, RULE_parenthesizedExpression = 18, 
            RULE_optionalSign = 19, RULE_primitive = 20, RULE_statement = 21, 
            RULE_assignment = 22, RULE_conditional = 23, RULE_elseBody = 24, 
            RULE_loop = 25, RULE_body = 26, RULE_statementList = 27, RULE_print = 28, 
            RULE_printContent = 29, RULE_morePrintContent = 30, RULE_functionCall = 31, 
            RULE_expressionList = 32, RULE_moreExpressions = 33

	public
	static let ruleNames: [String] = [
		"program", "optionalVariables", "variableDeclaration", "idList", "moreIds", 
		"functions", "function", "parameterList", "parameter", "moreParameters", 
		"type", "expression", "expressionPrime", "comparisonExpression", "comparisonOperators", 
		"term", "termPrime", "factor", "parenthesizedExpression", "optionalSign", 
		"primitive", "statement", "assignment", "conditional", "elseBody", "loop", 
		"body", "statementList", "print", "printContent", "morePrintContent", 
		"functionCall", "expressionList", "moreExpressions"
	]

	private static let _LITERAL_NAMES: [String?] = [
		nil, nil, "'program'", "'begin'", "'end'", "'vars'", "'void'", "'while'", 
		"'do'", "'print'", "'else'", "'int'", "'float'", "'('", "')'", "'{'", 
		"'}'", "';'", "':'", "','", "'='", "'+'", "'-'", "'*'", "'/'", "'<'", 
		"'>'", "'!='", "'=='"
	]
	private static let _SYMBOLIC_NAMES: [String?] = [
		nil, "CONST", "PROGRAM", "BEGIN", "END", "VARS", "VOID", "WHILE", "DO", 
		"PRINT", "ELSE", "INT_TYPE", "FLOAT_TYPE", "LPAREN", "RPAREN", "LBRACE", 
		"RBRACE", "SEMICOLON", "COLON", "COMMA", "EQ", "PLUS", "MINUS", "MUL", 
		"DIV", "LT", "GT", "NEQ", "EQEQ", "ID", "CONST_INT", "CONST_FLOAT", "STRING_LITERAL", 
		"WS"
	]
	public
	static let VOCABULARY = Vocabulary(_LITERAL_NAMES, _SYMBOLIC_NAMES)

	override open
	func getGrammarFileName() -> String { return "LittleDuck.g4" }

	override open
	func getRuleNames() -> [String] { return LittleDuckParser.ruleNames }

	override open
	func getSerializedATN() -> [Int] { return LittleDuckParser._serializedATN }

	override open
	func getATN() -> ATN { return LittleDuckParser._ATN }


	override open
	func getVocabulary() -> Vocabulary {
	    return LittleDuckParser.VOCABULARY
	}

	override public
	init(_ input:TokenStream) throws {
	    RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION)
		try super.init(input)
		_interp = ParserATNSimulator(self,LittleDuckParser._ATN,LittleDuckParser._decisionToDFA, LittleDuckParser._sharedContextCache)
	}


	public class ProgramContext: ParserRuleContext {
			open
			func PROGRAM() -> TerminalNode? {
				return getToken(LittleDuckParser.Tokens.PROGRAM.rawValue, 0)
			}
			open
			func ID() -> TerminalNode? {
				return getToken(LittleDuckParser.Tokens.ID.rawValue, 0)
			}
			open
			func SEMICOLON() -> TerminalNode? {
				return getToken(LittleDuckParser.Tokens.SEMICOLON.rawValue, 0)
			}
			open
			func optionalVariables() -> OptionalVariablesContext? {
				return getRuleContext(OptionalVariablesContext.self, 0)
			}
			open
			func functions() -> FunctionsContext? {
				return getRuleContext(FunctionsContext.self, 0)
			}
			open
			func BEGIN() -> TerminalNode? {
				return getToken(LittleDuckParser.Tokens.BEGIN.rawValue, 0)
			}
			open
			func body() -> BodyContext? {
				return getRuleContext(BodyContext.self, 0)
			}
			open
			func END() -> TerminalNode? {
				return getToken(LittleDuckParser.Tokens.END.rawValue, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return LittleDuckParser.RULE_program
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LittleDuckListener {
				listener.enterProgram(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LittleDuckListener {
				listener.exitProgram(self)
			}
		}
	}
	@discardableResult
	 open func program() throws -> ProgramContext {
		var _localctx: ProgramContext
		_localctx = ProgramContext(_ctx, getState())
		try enterRule(_localctx, 0, LittleDuckParser.RULE_program)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(68)
		 	try match(LittleDuckParser.Tokens.PROGRAM.rawValue)
		 	setState(69)
		 	try match(LittleDuckParser.Tokens.ID.rawValue)
		 	setState(70)
		 	try match(LittleDuckParser.Tokens.SEMICOLON.rawValue)
		 	setState(71)
		 	try optionalVariables()
		 	setState(72)
		 	try functions()
		 	setState(73)
		 	try match(LittleDuckParser.Tokens.BEGIN.rawValue)
		 	setState(74)
		 	try body()
		 	setState(75)
		 	try match(LittleDuckParser.Tokens.END.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class OptionalVariablesContext: ParserRuleContext {
			open
			func VARS() -> TerminalNode? {
				return getToken(LittleDuckParser.Tokens.VARS.rawValue, 0)
			}
			open
			func variableDeclaration() -> VariableDeclarationContext? {
				return getRuleContext(VariableDeclarationContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return LittleDuckParser.RULE_optionalVariables
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LittleDuckListener {
				listener.enterOptionalVariables(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LittleDuckListener {
				listener.exitOptionalVariables(self)
			}
		}
	}
	@discardableResult
	 open func optionalVariables() throws -> OptionalVariablesContext {
		var _localctx: OptionalVariablesContext
		_localctx = OptionalVariablesContext(_ctx, getState())
		try enterRule(_localctx, 2, LittleDuckParser.RULE_optionalVariables)
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(80)
		 	try _errHandler.sync(self)
		 	switch (LittleDuckParser.Tokens(rawValue: try _input.LA(1))!) {
		 	case .VARS:
		 		try enterOuterAlt(_localctx, 1)
		 		setState(77)
		 		try match(LittleDuckParser.Tokens.VARS.rawValue)
		 		setState(78)
		 		try variableDeclaration()

		 		break
		 	case .BEGIN:fallthrough
		 	case .VOID:fallthrough
		 	case .LBRACE:
		 		try enterOuterAlt(_localctx, 2)

		 		break
		 	default:
		 		throw ANTLRException.recognition(e: NoViableAltException(self))
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class VariableDeclarationContext: ParserRuleContext {
			open
			func idList() -> IdListContext? {
				return getRuleContext(IdListContext.self, 0)
			}
			open
			func COLON() -> TerminalNode? {
				return getToken(LittleDuckParser.Tokens.COLON.rawValue, 0)
			}
			open
			func type() -> TypeContext? {
				return getRuleContext(TypeContext.self, 0)
			}
			open
			func SEMICOLON() -> TerminalNode? {
				return getToken(LittleDuckParser.Tokens.SEMICOLON.rawValue, 0)
			}
			open
			func variableDeclaration() -> VariableDeclarationContext? {
				return getRuleContext(VariableDeclarationContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return LittleDuckParser.RULE_variableDeclaration
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LittleDuckListener {
				listener.enterVariableDeclaration(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LittleDuckListener {
				listener.exitVariableDeclaration(self)
			}
		}
	}
	@discardableResult
	 open func variableDeclaration() throws -> VariableDeclarationContext {
		var _localctx: VariableDeclarationContext
		_localctx = VariableDeclarationContext(_ctx, getState())
		try enterRule(_localctx, 4, LittleDuckParser.RULE_variableDeclaration)
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(89)
		 	try _errHandler.sync(self)
		 	switch (LittleDuckParser.Tokens(rawValue: try _input.LA(1))!) {
		 	case .ID:
		 		try enterOuterAlt(_localctx, 1)
		 		setState(82)
		 		try idList()
		 		setState(83)
		 		try match(LittleDuckParser.Tokens.COLON.rawValue)
		 		setState(84)
		 		try type()
		 		setState(85)
		 		try match(LittleDuckParser.Tokens.SEMICOLON.rawValue)
		 		setState(86)
		 		try variableDeclaration()

		 		break
		 	case .BEGIN:fallthrough
		 	case .VOID:fallthrough
		 	case .LBRACE:
		 		try enterOuterAlt(_localctx, 2)

		 		break
		 	default:
		 		throw ANTLRException.recognition(e: NoViableAltException(self))
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class IdListContext: ParserRuleContext {
			open
			func ID() -> TerminalNode? {
				return getToken(LittleDuckParser.Tokens.ID.rawValue, 0)
			}
			open
			func moreIds() -> MoreIdsContext? {
				return getRuleContext(MoreIdsContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return LittleDuckParser.RULE_idList
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LittleDuckListener {
				listener.enterIdList(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LittleDuckListener {
				listener.exitIdList(self)
			}
		}
	}
	@discardableResult
	 open func idList() throws -> IdListContext {
		var _localctx: IdListContext
		_localctx = IdListContext(_ctx, getState())
		try enterRule(_localctx, 6, LittleDuckParser.RULE_idList)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(91)
		 	try match(LittleDuckParser.Tokens.ID.rawValue)
		 	setState(92)
		 	try moreIds()

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class MoreIdsContext: ParserRuleContext {
			open
			func COMMA() -> TerminalNode? {
				return getToken(LittleDuckParser.Tokens.COMMA.rawValue, 0)
			}
			open
			func ID() -> TerminalNode? {
				return getToken(LittleDuckParser.Tokens.ID.rawValue, 0)
			}
			open
			func moreIds() -> MoreIdsContext? {
				return getRuleContext(MoreIdsContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return LittleDuckParser.RULE_moreIds
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LittleDuckListener {
				listener.enterMoreIds(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LittleDuckListener {
				listener.exitMoreIds(self)
			}
		}
	}
	@discardableResult
	 open func moreIds() throws -> MoreIdsContext {
		var _localctx: MoreIdsContext
		_localctx = MoreIdsContext(_ctx, getState())
		try enterRule(_localctx, 8, LittleDuckParser.RULE_moreIds)
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(98)
		 	try _errHandler.sync(self)
		 	switch (LittleDuckParser.Tokens(rawValue: try _input.LA(1))!) {
		 	case .COMMA:
		 		try enterOuterAlt(_localctx, 1)
		 		setState(94)
		 		try match(LittleDuckParser.Tokens.COMMA.rawValue)
		 		setState(95)
		 		try match(LittleDuckParser.Tokens.ID.rawValue)
		 		setState(96)
		 		try moreIds()

		 		break

		 	case .COLON:
		 		try enterOuterAlt(_localctx, 2)

		 		break
		 	default:
		 		throw ANTLRException.recognition(e: NoViableAltException(self))
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class FunctionsContext: ParserRuleContext {
			open
			func function() -> FunctionContext? {
				return getRuleContext(FunctionContext.self, 0)
			}
			open
			func functions() -> FunctionsContext? {
				return getRuleContext(FunctionsContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return LittleDuckParser.RULE_functions
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LittleDuckListener {
				listener.enterFunctions(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LittleDuckListener {
				listener.exitFunctions(self)
			}
		}
	}
	@discardableResult
	 open func functions() throws -> FunctionsContext {
		var _localctx: FunctionsContext
		_localctx = FunctionsContext(_ctx, getState())
		try enterRule(_localctx, 10, LittleDuckParser.RULE_functions)
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(104)
		 	try _errHandler.sync(self)
		 	switch (LittleDuckParser.Tokens(rawValue: try _input.LA(1))!) {
		 	case .VOID:
		 		try enterOuterAlt(_localctx, 1)
		 		setState(100)
		 		try function()
		 		setState(101)
		 		try functions()

		 		break

		 	case .BEGIN:
		 		try enterOuterAlt(_localctx, 2)

		 		break
		 	default:
		 		throw ANTLRException.recognition(e: NoViableAltException(self))
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class FunctionContext: ParserRuleContext {
			open
			func VOID() -> TerminalNode? {
				return getToken(LittleDuckParser.Tokens.VOID.rawValue, 0)
			}
			open
			func ID() -> TerminalNode? {
				return getToken(LittleDuckParser.Tokens.ID.rawValue, 0)
			}
			open
			func LPAREN() -> TerminalNode? {
				return getToken(LittleDuckParser.Tokens.LPAREN.rawValue, 0)
			}
			open
			func parameterList() -> ParameterListContext? {
				return getRuleContext(ParameterListContext.self, 0)
			}
			open
			func RPAREN() -> TerminalNode? {
				return getToken(LittleDuckParser.Tokens.RPAREN.rawValue, 0)
			}
			open
			func LBRACE() -> TerminalNode? {
				return getToken(LittleDuckParser.Tokens.LBRACE.rawValue, 0)
			}
			open
			func optionalVariables() -> OptionalVariablesContext? {
				return getRuleContext(OptionalVariablesContext.self, 0)
			}
			open
			func body() -> BodyContext? {
				return getRuleContext(BodyContext.self, 0)
			}
			open
			func RBRACE() -> TerminalNode? {
				return getToken(LittleDuckParser.Tokens.RBRACE.rawValue, 0)
			}
			open
			func SEMICOLON() -> TerminalNode? {
				return getToken(LittleDuckParser.Tokens.SEMICOLON.rawValue, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return LittleDuckParser.RULE_function
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LittleDuckListener {
				listener.enterFunction(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LittleDuckListener {
				listener.exitFunction(self)
			}
		}
	}
	@discardableResult
	 open func function() throws -> FunctionContext {
		var _localctx: FunctionContext
		_localctx = FunctionContext(_ctx, getState())
		try enterRule(_localctx, 12, LittleDuckParser.RULE_function)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(106)
		 	try match(LittleDuckParser.Tokens.VOID.rawValue)
		 	setState(107)
		 	try match(LittleDuckParser.Tokens.ID.rawValue)
		 	setState(108)
		 	try match(LittleDuckParser.Tokens.LPAREN.rawValue)
		 	setState(109)
		 	try parameterList()
		 	setState(110)
		 	try match(LittleDuckParser.Tokens.RPAREN.rawValue)
		 	setState(111)
		 	try match(LittleDuckParser.Tokens.LBRACE.rawValue)
		 	setState(112)
		 	try optionalVariables()
		 	setState(113)
		 	try body()
		 	setState(114)
		 	try match(LittleDuckParser.Tokens.RBRACE.rawValue)
		 	setState(115)
		 	try match(LittleDuckParser.Tokens.SEMICOLON.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class ParameterListContext: ParserRuleContext {
			open
			func parameter() -> ParameterContext? {
				return getRuleContext(ParameterContext.self, 0)
			}
			open
			func moreParameters() -> MoreParametersContext? {
				return getRuleContext(MoreParametersContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return LittleDuckParser.RULE_parameterList
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LittleDuckListener {
				listener.enterParameterList(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LittleDuckListener {
				listener.exitParameterList(self)
			}
		}
	}
	@discardableResult
	 open func parameterList() throws -> ParameterListContext {
		var _localctx: ParameterListContext
		_localctx = ParameterListContext(_ctx, getState())
		try enterRule(_localctx, 14, LittleDuckParser.RULE_parameterList)
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(121)
		 	try _errHandler.sync(self)
		 	switch (LittleDuckParser.Tokens(rawValue: try _input.LA(1))!) {
		 	case .ID:
		 		try enterOuterAlt(_localctx, 1)
		 		setState(117)
		 		try parameter()
		 		setState(118)
		 		try moreParameters()

		 		break

		 	case .RPAREN:
		 		try enterOuterAlt(_localctx, 2)

		 		break
		 	default:
		 		throw ANTLRException.recognition(e: NoViableAltException(self))
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class ParameterContext: ParserRuleContext {
			open
			func ID() -> TerminalNode? {
				return getToken(LittleDuckParser.Tokens.ID.rawValue, 0)
			}
			open
			func COLON() -> TerminalNode? {
				return getToken(LittleDuckParser.Tokens.COLON.rawValue, 0)
			}
			open
			func type() -> TypeContext? {
				return getRuleContext(TypeContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return LittleDuckParser.RULE_parameter
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LittleDuckListener {
				listener.enterParameter(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LittleDuckListener {
				listener.exitParameter(self)
			}
		}
	}
	@discardableResult
	 open func parameter() throws -> ParameterContext {
		var _localctx: ParameterContext
		_localctx = ParameterContext(_ctx, getState())
		try enterRule(_localctx, 16, LittleDuckParser.RULE_parameter)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(123)
		 	try match(LittleDuckParser.Tokens.ID.rawValue)
		 	setState(124)
		 	try match(LittleDuckParser.Tokens.COLON.rawValue)
		 	setState(125)
		 	try type()

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class MoreParametersContext: ParserRuleContext {
			open
			func COMMA() -> TerminalNode? {
				return getToken(LittleDuckParser.Tokens.COMMA.rawValue, 0)
			}
			open
			func parameter() -> ParameterContext? {
				return getRuleContext(ParameterContext.self, 0)
			}
			open
			func moreParameters() -> MoreParametersContext? {
				return getRuleContext(MoreParametersContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return LittleDuckParser.RULE_moreParameters
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LittleDuckListener {
				listener.enterMoreParameters(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LittleDuckListener {
				listener.exitMoreParameters(self)
			}
		}
	}
	@discardableResult
	 open func moreParameters() throws -> MoreParametersContext {
		var _localctx: MoreParametersContext
		_localctx = MoreParametersContext(_ctx, getState())
		try enterRule(_localctx, 18, LittleDuckParser.RULE_moreParameters)
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(132)
		 	try _errHandler.sync(self)
		 	switch (LittleDuckParser.Tokens(rawValue: try _input.LA(1))!) {
		 	case .COMMA:
		 		try enterOuterAlt(_localctx, 1)
		 		setState(127)
		 		try match(LittleDuckParser.Tokens.COMMA.rawValue)
		 		setState(128)
		 		try parameter()
		 		setState(129)
		 		try moreParameters()

		 		break

		 	case .RPAREN:
		 		try enterOuterAlt(_localctx, 2)

		 		break
		 	default:
		 		throw ANTLRException.recognition(e: NoViableAltException(self))
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}
